--- a/blog.css
+++ b/blog.css
@@ -35,8 +35,10 @@ a{
 .main_container{
     display: grid;
     gap:1rem;
-    grid-template-columns:repeat(auto-fit,minmax(350px,400px));
+    grid-template-columns:repeat(4,1fr);
     justify-content:center;
+
+
 }
 .card_container{
     display: flex;
@@ -44,6 +46,9 @@ a{
     border: 2px solid grey;
     border-radius: 8px;
     overflow:hidden;
+    width:275px;
+    height:300px;
+
 }
 .card_img_container{
     position:relative;
